--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,19 +1,76 @@
 
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Novedades</ion-title>
+  </ion-toolbar>
+  <ion-toolbar>
+    <ion-searchbar></ion-searchbar>
+  </ion-toolbar>
+</ion-header>
 
+<ion-list>
+  <ion-item>
+    <ion-select aria-label="Fruit" interface="action-sheet" placeholder="Select fruit">
+      <ion-select-option value="apples">Apples</ion-select-option>
+      <ion-select-option value="oranges">Oranges</ion-select-option>
+      <ion-select-option value="bananas">Bananas</ion-select-option>
+    </ion-select>
+  </ion-item>
+</ion-list>
 
 <ion-content>
   <swiper-container>
     <swiper-slide>
-      <h1>Hola Slide 1</h1>
-      <p>Hola soy el slide uno de la libreria swiper</p>
+      <ion-card>
+        <img alt="Devotion_-_Steam_cover_image" src="https://upload.wikimedia.org/wikipedia/en/2/2f/Devotion_-_Steam_cover_image.png" />
+        <ion-card-header>
+          <ion-card-title>Devotion</ion-card-title>
+          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card>
     </swiper-slide>
     <swiper-slide>
-      <h1>Hola Slide 2</h1>
-      <p>Hola soy el slide dos de la libreria swiper</p>
+      <ion-card>
+        <img alt="Visage" src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/594330/header.jpg?t=1607559678" />
+        <ion-card-header>
+          <ion-card-title>Visage</ion-card-title>
+          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card>
     </swiper-slide>
     <swiper-slide>
-      <h1>Hola Slide 3</h1>
-      <p>Hola soy el slide tres de la libreria swiper</p>
+      <ion-card>
+        <img alt="Silhouette of mountains" src="https://myhotposters.com/cdn/shop/products/mL6207_1024x1024.jpg?v=1655896342" />
+        <ion-card-header>
+          <ion-card-title>Madison</ion-card-title>
+          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card>
+    </swiper-slide>
+    <swiper-slide>
+      <ion-card>
+        <img alt="Silhouette of mountains" src="https://i.ebayimg.com/images/g/a-0AAOSw3VNZk0XQ/s-l1200.jpg" />
+        <ion-card-header>
+          <ion-card-title>Outlast II</ion-card-title>
+          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+        </ion-card-header>
+      
+        <ion-card-content>
+          Here's a small text description for the card content. Nothing more, nothing less.
+        </ion-card-content>
+      </ion-card>
     </swiper-slide>
   </swiper-container>
 </ion-content>
