--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,8 +1,11 @@
-
+// *{
+//   bac
+// }
 
 swiper-container{
   width: 100%;
   height: 100%;
+  background-image: url('https://i.pinimg.com/736x/47/68/22/4768220eda2bdf16308f85bc566d46f7.jpg');
 }
 
 swiper-slide{
