cambios registro, conexion api

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,4 +1,9 @@
-// *{
-//   bac
-// }
-
+.users-avatar{
+    width: 30px;
+    height: 30px;
+    
+}
+.image-post{
+    margin: 0 auto;
+    display: block;
+}
