--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,9 +1,25 @@
-
 <ion-header>
   <ion-toolbar>
-    <ion-title>Novedades</ion-title>
-  </ion-toolbar>
-  <ion-toolbar>
-    <ion-searchbar></ion-searchbar>
+    <ion-buttons>
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
+<ion-content>
+  <ion-list>
+    <ion-card *ngFor="let post of posts">
+      <ion-card-header>
+        <ion-card-subtitle>
+          <ion-avatar class="users-avatar">
+            <img [src]="post.user.image ? post.user.image : 'assets/img/default-avatar.jpeg'"/>
+          </ion-avatar>
+          <ion-label>{{post.user.name}}</ion-label>
+        </ion-card-subtitle>
+      </ion-card-header>
+      <img src="{{post.image}}" class="image-post" />
+      <ion-card-content>
+        {{post.description}}
+      </ion-card-content>
+    </ion-card>
+  </ion-list>
+</ion-content>
