--- a/src/app/register/register.page.scss
+++ b/src/app/register/register.page.scss
@@ -1,52 +1,66 @@
+.video-game-theme {
+    background: #0b0b0d;
+    color: #ffffff;
+    font-family: 'Roboto', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 10px;
+  }
 
-  
   .avatar-container {
     display: flex;
     justify-content: center;
     margin-top: 20px;
   }
 
-
-  
   .user-avatar {
-    width: 200px;
-    height: 70px;
-    border: 3px solid rgba(116, 116, 116, 0.8);
+
+    height: 100px;
+    border: 3px solid rgba(153, 0, 255, 0.8);
     border-radius: 500%;
-    box-shadow: 0 0 15px rgba(77, 77, 77, 0.8);
+    box-shadow: 0 0 15px rgba(255, 45, 129, 0.8);
   }
-  
+
   .login-form {
     padding: 20px;
-    background: rgba(41, 11, 66, 0.384);
+    background: rgba(25, 25, 25, 0.95);
     border-radius: 10px;
-    box-shadow: 0 0 20px rgba(38, 38, 38, 0.5);
+    box-shadow: 0 0 20px rgba(212, 0, 255, 0.5);
     margin: auto;
     max-width: 400px;
     margin-top: 30px;
   }
-  
+
+  .title {
+    font-size: 1.8rem;
+    text-align: center;
+    color: #ffffff;
+    text-shadow: 2px 2px 5px #000000;
+  }
+
   .horror-input {
     margin-bottom: 15px;
-    --background: rgba(50, 50, 50, 0.8);
+    --background: rgba(30, 30, 30, 0.9);
     --color: white;
     --placeholder-color: rgba(255, 255, 255, 0.6);
     border-radius: 5px;
   }
-  
-  .input-icon {
-    color: #ff4444;
-  }
-  
+
   .error-messages ion-label {
     font-size: 12px;
     margin-top: 5px;
     margin-left: 5px;
-    color: #ff4444;
+    color: #2a0000;
   }
-  
+
+  .btnRegistro {
+    margin-top: 20px;
+    text-align: center;
+  }
+
   .login-button {
-    color: white;
+    color: rgb(0, 0, 0);
     text-transform: uppercase;
     font-weight: bold;
     box-shadow: 0 4px 15px rgba(72, 0, 255, 0.5);
@@ -58,26 +72,12 @@
     box-shadow: 0 6px 20px rgba(88, 91, 255, 0.8);
   }
 
-  .additional-links {
-    text-align: center;
-    margin-top: 20px;
-  }
-
-  .registro {
-    color: #9d00ff;
-    text-decoration: none;
-    font-size: 1.2rem;
-    font-weight: bold;
-    transition: color 0.3s ease;
-  }
-
-  .registro:hover {
-    color: #000000;
-  }
-
-  .forgot-password {
+  .retroceso {
     color: #ffffff;
+    text-decoration: none;
     margin-top: 10px;
-    font-size: 1rem;
+    display: inline-block;
+    font-size: 1.2rem;
+
+    
   }
-  
