Commit crear post y cargarlos

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,9 +1,33 @@
-.users-avatar{
-    width: 30px;
-    height: 30px;
-    
+swiper-container {
+    width: 100%;
+    height: 100%;
 }
-.image-post{
-    margin: 0 auto;
-    display: block;
+swiper-slide {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: aqua;
+}
+.title1 {
+  color: red;
+}
+
+.bg-color-slide {
+  background-color: magenta;
+}
+.user-avatar {
+  width: 30px;
+  height: 30px;
+}
+
+.image-post {
+  margin: 0 auto;
+  display: block;
+}
+ion-fab {
+  ion-fab-button{
+    --background: #f4f4f4;
+    --color: rgb(255, 93, 255);
+  }
 }
