--- a/src/app/register/register.page.html
+++ b/src/app/register/register.page.html
@@ -1,8 +1,4 @@
-<ion-header>
-  <ion-toolbar color="tertiary">
-    <ion-title class="title">🎮 REGISTRO</ion-title>
-  </ion-toolbar>
-</ion-header>
+
 
 <ion-content class="video-game-theme">
   <div class="avatar-container">
@@ -53,11 +49,11 @@
     </ng-container>
 
     <div class="btnRegistro">
-      <ion-button expand="block" class="login-button" shape="round" type="submit" [disabled]="!registerForm.valid">
+      <ion-button expand="block" class="Registro" shape="round" type="submit" [disabled]="!registerForm.valid">
         <h3>Registrarse</h3>
       </ion-button>  
       <a href="/login" class="retroceso">
-        <h5>🔙 ATRÁS</h5>
+        <h5>ATRÁS</h5>
       </a>
     </div>
   </form>
