--- a/src/app/account/account.page.html
+++ b/src/app/account/account.page.html
@@ -1,22 +1,28 @@
 <ion-header>
-  <ion-toolbar color="primary">
+  <ion-toolbar>
     <ion-buttons slot="start">
       <ion-menu-button></ion-menu-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
-<ion-content class="ion-padding">
-  <div class="profile-header ion-text-center">
-    <ion-avatar class="profile-avatar" (click)="takePhoto()">
-      <img [src]="user_data.image ? user_data.image : 'assets/images/default-avatar.jpeg'" />
+<ion-content>
+  <div class="account-container">
+    <h1 class="account-name">
+      {{ user_data.name }} {{ user_data.last_name }}
+    </h1>
+
+    <ion-avatar class="account-avatar" (click)="presentPhotoOptions()">
+      <img 
+        [src]="user_data.image ? user_data.image : 'assets/images/default-avatar.jpeg'"
+        alt="User Avatar"
+      />
     </ion-avatar>
-    <h1 class="profile-name">{{user_data.name}} {{user_data.last_name}}</h1>
-  </div>
-  
-  <div class="profile-details ion-text-center">
-    <p class="profile-username">Usuario: {{user_data.username}}</p>
-    <p>Seguidores: {{user_data.followed_users.length}}</p>
-    <p>Siguiendo: {{user_data.following_users.length}}</p>
+
+    <div class="account-info">
+      <p><strong>Usuario:</strong> {{ user_data.username }}</p>
+      <p><strong>Seguidores:</strong> {{ user_data.followers.length }}</p>
+      <p><strong>Siguiendo:</strong> {{ user_data.followees.length }}</p>
+    </div>
   </div>
 </ion-content>
