--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,7 +7,7 @@
 </ion-header>
 <ion-content>
   <ion-list>
-
+      <ion-progress-bar type="indeterminate" *ngIf="isLoading"></ion-progress-bar>
       <ion-card *ngFor="let post of posts">
           <img src="{{post.image}}" class="image-post" />
           <ion-card-header>
@@ -34,7 +34,8 @@
 >
   <ion-infinite-scroll-content
     loadingSpinner="bubbles"
-    loadingText="Cargando más publicaciones...">
+    loadingText="Cargando más publicaciones..."
+  >
   </ion-infinite-scroll-content>
 </ion-infinite-scroll>
 
