--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -1,12 +1,12 @@
 /* ----- General Styles ----- */
 ion-content {
-  --background: rgba(41, 11, 66, 0.8);
+  --background: linear-gradient(to bottom, rgba(41, 11, 66, 0.9), rgba(0, 0, 0, 0.9));
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
 }
+
 
 
 .avatar-container {
@@ -16,12 +16,11 @@ ion-content {
 }
 
 .user-avatar {
-  width: 100px;
-  height: 100px;
+  width: 150px;
+  height: 150px;
   border-radius: 50%;
-  border: 3px solid rgba(255, 255, 255, 0.6);
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
-  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  border: 3px solid rgba(157, 0, 255, 0.6);
+  box-shadow: 0 0 15px rgba(157, 0, 255, 0.8);
 }
 
 .user-avatar:hover {
