--- a/src/app/account/account.page.scss
+++ b/src/app/account/account.page.scss
@@ -11,6 +11,7 @@ ion-content {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   background: rgba(255, 255, 255, 0.1);
   padding: 20px;
   border-radius: 12px;
