--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,16 +1,11 @@
 
 
 <ion-content class="ion-padding horror-theme">
-  <!-- Imagen de Usuario -->
-  <div class="avatar-container">
-    <ion-avatar>
-      <img
-        alt="User Avatar"
-        src="https://ionicframework.com/docs/img/demos/avatar.svg"
-        class="user-avatar"
-      />
-    </ion-avatar>
-  </div>
+
+  <ion-content class="video-game-theme">
+    <div class="avatar-container">
+      <img src="https://ionicframework.com/docs/img/demos/avatar.svg" alt="User Avatar" class="user-avatar">
+    </div>
 
   <form [formGroup]="loginForm" (ngSubmit)="loginUser(loginForm.value)" class="login-form">
     <ion-item class="horror-input">
