--- a/src/app/account/account.page.scss
+++ b/src/app/account/account.page.scss
@@ -14,10 +14,12 @@ ion-content {
   justify-content: center;
   background: rgba(255, 255, 255, 0.1);
   padding: 20px;
+  margin-left: 50px;
+  margin-top: 100px;
   border-radius: 12px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
   max-width: 400px;
-  width: 90%;
+  width: 70%;
 }
 
 h1 {
