--- a/src/app/intro/intro.page.html
+++ b/src/app/intro/intro.page.html
@@ -12,11 +12,11 @@
         <img alt="Devotion_-_Steam_cover_image" src="https://upload.wikimedia.org/wikipedia/en/2/2f/Devotion_-_Steam_cover_image.png" />
         <ion-card-header>
           <ion-card-title>Devotion</ion-card-title>
-          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+          <ion-card-subtitle>Un juego bastante intrigante</ion-card-subtitle>
         </ion-card-header>
       
         <ion-card-content>
-          Here's a small text description for the card content. Nothing more, nothing less.
+          La locura te acecha en la oscuridad. Sin armas ni escapatoria, solo te queda huir, esconderte y enfrentarr los horrores que distorsionan tu realidad. ¿Cuánto tiempo soportarás antes de quebrarte?
         </ion-card-content>
       </ion-card>
     </swiper-slide>
@@ -25,11 +25,11 @@
         <img alt="Visage" src="https://shared.fastly.steamstatic.com/store_item_assets/steam/apps/594330/header.jpg?t=1607559678" />
         <ion-card-header>
           <ion-card-title>Visage</ion-card-title>
-          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+          <ion-card-subtitle>Un juego bastante intrigante</ion-card-subtitle>
         </ion-card-header>
       
         <ion-card-content>
-          Here's a small text description for the card content. Nothing more, nothing less.
+          La locura te acecha en la oscuridad. Sin armas ni escapatoria, solo te queda huir, esconderte y enfrentar los horrores que distorsionan tu realidad. ¿Cuánto tiempo soportarás antes de quebrarte?
         </ion-card-content>
       </ion-card>
     </swiper-slide>
@@ -38,11 +38,11 @@
         <img alt="Silhouette of mountains" src="https://myhotposters.com/cdn/shop/products/mL6207_1024x1024.jpg?v=1655896342" />
         <ion-card-header>
           <ion-card-title>Madison</ion-card-title>
-          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+          <ion-card-subtitle>Un juego bastante intrigante</ion-card-subtitle>
         </ion-card-header>
       
         <ion-card-content>
-          Here's a small text description for the card content. Nothing more, nothing less.
+          La locura te acecha en la oscuridad. Sin armas ni escapatoria, solo te queda huir, esconderte y enfrentar los horrores que distorsionan tu realidad. ¿Cuánto tiempo soportarás antes de quebrarte?
         </ion-card-content>
       </ion-card>
     </swiper-slide>
@@ -51,14 +51,14 @@
         <img alt="Silhouette of mountains" src="https://i.ebayimg.com/images/g/a-0AAOSw3VNZk0XQ/s-l1200.jpg" />
         <ion-card-header>
           <ion-card-title>Outlast II</ion-card-title>
-          <ion-card-subtitle>Card Subtitle</ion-card-subtitle>
+          <ion-card-subtitle>Un juego bastante intrigante</ion-card-subtitle>
         </ion-card-header>
         <ion-button size="large"(click)="finish()">
         Ir al home
           <ion-icon slot="end" name="heart" ></ion-icon>
         </ion-button>
         <ion-card-content>
-          Here's a small text description for the card content. Nothing more, nothing less.
+          La locura te acecha en la oscuridad. Sin armas ni escapatoria, solo te queda huir, esconderte y enfrentar los horrores que distorsionan tu realidad. ¿Cuánto tiempo soportarás antes de quebrarte?
         </ion-card-content>
       </ion-card>
     </swiper-slide>
